--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     font-size: 3.5vh;
     font-weight: 500;
+    font-family: monospace;
 }
 
 .container {
@@ -39,6 +40,7 @@ button {
     background-color: lightgrey;
     font-size: 2.5vh;
     font-weight: 600;
+    font-family: monospace;
 }
 
 button:hover {
